--- a/index.html
+++ b/index.html
@@ -80,70 +80,175 @@
 
     <!-- courses starts here -->
     <div id="courses">
-        <h1 class="title">Our Online Courses</h1>
-        <div class="container course-section">
-            <div class="single-course">
-                <img src="./Photos/course-1.png">
-                <h4>data analysis</h4>
-                <p>Designation</p>
-                <a href="" class="main-btn">Enroll Now</a>
-                <div class="course-des">
-                    <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
-                    <span><i class="fa-solid fa-users"></i> 60 seats</span>
+        <div class="container">
+            <h1 class="title">Our Online Courses</h1>
+            <div class="course-section">
+                <div class="single-course">
+                    <img src="./Photos/course-1.png">
+                    <h4>data analysis</h4>
+                    <p>Designation</p>
+                    <a href="" class="main-btn">Enroll Now</a>
+                    <div class="course-des">
+                        <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
+                        <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                    </div>
                 </div>
-            </div>
-            <div class="single-course">
-                <img src="./Photos/course-2.jpeg">
-                <h4>data structure</h4>
-                <p>Designation</p>
-                <a href="" class="main-btn">Enroll Now</a>
-                <div class="course-des">
-                    <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
-                    <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                <div class="single-course">
+                    <img src="./Photos/course-2.jpeg">
+                    <h4>data structure</h4>
+                    <p>Designation</p>
+                    <a href="" class="main-btn">Enroll Now</a>
+                    <div class="course-des">
+                        <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
+                        <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                    </div>
                 </div>
-            </div>
-            <div class="single-course">
-                <img src="./Photos/course-3.jpg">
-                <h4>software development</h4>
-                <p>Designation</p>
-                <a href="" class="main-btn">Enroll Now</a>
-                <div class="course-des">
-                    <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
-                    <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                <div class="single-course">
+                    <img src="./Photos/course-3.jpg">
+                    <h4>software development</h4>
+                    <p>Designation</p>
+                    <a href="" class="main-btn">Enroll Now</a>
+                    <div class="course-des">
+                        <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
+                        <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                    </div>
                 </div>
-            </div>
-            <div class="single-course">
-                <img src="./Photos/course-4.jpg">
-                <h4>web development</h4>
-                <p>Designation</p>
-                <a href="" class="main-btn">Enroll Now</a>
-                <div class="course-des">
-                    <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
-                    <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                <div class="single-course">
+                    <img src="./Photos/course-4.jpg">
+                    <h4>web development</h4>
+                    <p>Designation</p>
+                    <a href="" class="main-btn">Enroll Now</a>
+                    <div class="course-des">
+                        <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
+                        <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                    </div>
                 </div>
-            </div>
-            <div class="single-course">
-                <img src="./Photos/course-5.webp">
-                <h4>ethical hacking</h4>
-                <p>Designation</p>
-                <a href="" class="main-btn">Enroll Now</a>
-                <div class="course-des">
-                    <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
-                    <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                <div class="single-course">
+                    <img src="./Photos/course-5.webp">
+                    <h4>ethical hacking</h4>
+                    <p>Designation</p>
+                    <a href="" class="main-btn">Enroll Now</a>
+                    <div class="course-des">
+                        <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
+                        <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                    </div>
                 </div>
-            </div>
-            <div class="single-course">
-                <img src="./Photos/course-6.webp">
-                <h4>cyber security</h4>
-                <p>Designation</p>
-                <a href="" class="main-btn">Enroll Now</a>
-                <div class="course-des">
-                    <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
-                    <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                <div class="single-course">
+                    <img src="./Photos/course-6.webp">
+                    <h4>cyber security</h4>
+                    <p>Designation</p>
+                    <a href="" class="main-btn">Enroll Now</a>
+                    <div class="course-des">
+                        <span><i class="fa-solid fa-calendar-days"></i> Start 20 April,2023</span>
+                        <span><i class="fa-solid fa-users"></i> 60 seats</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- graduation starts here -->
+    <div class="graduation">
+        <h1>E- School AT A GLANCE</h1>
+        <div class="container text-center">
+            <div class="single-graduation">
+                <i class="fa-solid fa-graduation-cap"></i>
+                <h2 id="count1">12,000</h2>
+                <h6>STUDENTS</h6>
+            </div>
+            <div class="single-graduation">
+                <i class="fa-solid fa-graduation-cap"></i>
+                <h2 id="count2">18</h2>
+                <h6>COURSES</h6>
+            </div>
+            <div class="single-graduation">
+                <i class="fa-solid fa-user"></i>
+                <h2 id="count3">267</h2>
+                <h6>FACULTY MEMBERS</h6>
+            </div>
+            <div class="single-graduation">
+                <i class="fa-solid fa-graduation-cap"></i>
+                <h2 id="count4">509</h2>
+                <h6>TEACHERS</h6>
+            </div>
+        </div>
+    </div>
+
+    <!-- blogs starts here -->
+    <div id="blogs">
+        <div class="container">
+            <h1 class="title">Top Headings</h1>
+            <div class="blog-section">
+                <div class="single-blog">
+                    <img src="./Photos/blog-1.jpg">
+                    <span class="date">22 FEB</span>
+                    <h4>LIBRARY</h4>
+                    <p>Our library at Harvard University of Shopwebly, the Website to Compare Prices! Find and Compare Online Learning Harvard Online. Save Now at Shopwebly!</p>
+                    <a href="">View More <i class="fa-solid fa-circle-info"></i></a>
+                </div>
+                <div class="single-blog">
+                    <img src="./Photos/blog-2.webp">
+                    <span class="date">15 JAN</span>
+                    <h4>STUDENTS</h4>
+                    <p>Find Online Learning Harvard at Shopwebly, the Website to Compare Prices! Find and Compare Online Learning Harvard Online. Save Now at Shopwebly! Compare Products.</p>
+                    <a href="">View More <i class="fa-solid fa-circle-info"></i></a>
+                </div>
+                <div class="single-blog">
+                    <img src="./Photos/blog-3.png">
+                    <span class="date">30 Mar</span>
+                    <h4>Hired</h4>
+                    <p>Hiring students to learn Harvard at Shopwebly, the Website to Compare Prices! Find and Compare Online Learning Harvard Online. Save Now at Shopwebly!</p>
+                    <a href="">View More <i class="fa-solid fa-circle-info"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer starts here -->
+    <footer>
+        <div class="container">
+            <div class="footer-section">
+                <div class="single-footer-section">
+                    <h3>our address</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo sed nam cupiditate reprehenderit porro dicta, dignissimos eveniet?</p>
+                    <div class="address">
+                        <a href=""><i class="fa-solid fa-location-dot"></i> 795 South Park, CA 94107</a>
+                        <a href=""><i class="fa-solid fa-envelope"></i> eschool77@yahoo.com</a>
+                        <a href=""><i class="fa-solid fa-phone-flip"></i> +88 02763537</a>
+                    </div>
+                </div>
+                <div class="single-footer-section">
+                    <h3>quick links</h3>
+                    <div class="address">
+                        <a href="">Privacy & Policy</a>
+                        <a href="">Terms & Conditions</a>
+                        <a href="">Support</a>
+                        <a href="">Contact Us</a>
+                        <a href="">Helps</a>
+                        <a href="">Make Appoinment</a>
+                    </div>
+                </div>
+                <div class="single-footer-section">
+                    <h3>latest posts</h3>
+                    <div class="address">
+                        <span><i class="fa-brands fa-twitter"></i> Twitter - <a href="">https://twitter.com</a></span>
+                        <span><i class="fa-brands fa-square-facebook"></i> Facebook - <a href="">https://facebook.com</a></span>
+                        <span><i class="fa-brands fa-linkedin"></i> Linkedin - <a href="">https://linkedin.com</a></span>
+                    </div>
+                </div>
+                <div class="single-footer-section">
+                    <h3>contact us</h3>
+                    <form action="">
+                        <input type="text" placeholder="Your Name" required>
+                        <input type="email" placeholder="Your Email" required>
+                        <button type="submit">Register</button>
+                    </form>
+                </div>
+            </div>
+            <hr>
+            <article class="text-center">Copyright @ 2018 | Designed with <i class="fa-solid fa-heart"></i> by Maruf Akash</article>
+        </div>
+    </footer>
 
     <!-- Bootstrap javascript cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
